# rag-web-search-helper

./: README.md  ingestion.py  main.py  pyproject.toml
chroma_bd/d16df11c-c8ef-4094-a403-b0a032504741/: index_metadata.pickle
